# spec-kat

./: .gitignore  .mutmut.toml  CLAUDE.md  Makefile  coverage.json  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/wiki/scripts/: apply.py  cli.py  config.py  git.py  ingest.py  lint.py  models.py  pyproject.toml  rebuild.py  repo.py  search.py  state.py
.github/workflows/: ci.yml
.sdd/: system_prompt.md
.sdd/config/: glossary.yaml  project_profile.yaml  sdd_config.yaml
.sdd/contracts/: cli.schema.yaml
.sdd/docs/: dev-cycle-map.md  human-guide-phase-cycle.md
.sdd/norms/: norm_catalog.yaml  senar_config.yaml
.sdd/plans/: Phases_index.md  Plan_v1.md  Plan_v10.md  Plan_v13.md  Plan_v14.md  Plan_v15.md  Plan_v16.md  Plan_v17.md  Plan_v18.md  Plan_v19.md  Plan_v2.md  Plan_v22.md  Plan_v23.md  Plan_v24.md  Plan_v25.md  Plan_v26.md  Plan_v27.md  Plan_v28.md  Plan_v29.md  Plan_v3.md  Plan_v30.md  Plan_v31.md  Plan_v32.md  Plan_v33.md  Plan_v34.md  Plan_v35.md  Plan_v39.md  Plan_v4.md  Plan_v40.md  Plan_v41.md  Plan_v42.md  Plan_v43.md  Plan_v44.md  Plan_v45.md  Plan_v46.md  Plan_v47.md  Plan_v48.md  Plan_v49.md  Plan_v5.md  Plan_v50.md  (+13 more)
.sdd/reports/: EL_Phase16_events.json  EL_Phase18_events.json  EL_Phase1_events.json  EL_Phase22_events.json  EL_Phase23_events.json  EL_Phase24_events.json  EL_Phase25_events.json  EL_Phase26_events.json  EL_Phase27_events.json  EL_Phase29_events.json  EL_Phase2_events.json  EL_Phase30_events.json  EL_Phase32_events.json  EL_Phase33_events.json  EL_Phase35_events.json  EL_Phase39_events.json  EL_Phase41_events.json  EL_Phase42_events.json  EL_Phase43_events.json  EL_Phase44_events.json  EL_Phase46_events.json  EL_Phase48_events.json  EL_Phase4_events.json  EL_Phase50_events.json  EL_Phase51_events.json  EL_Phase52_events.json  EL_Phase53_events.json  EL_Phase55_events.json  EL_Phase5_events.json  EL_Phase62_events.json  EL_Phase63_events.json  EL_Phase6_events.json  EL_Phase7_events.json  EvalReport_v61_GraphGuidedTest.md  EvalReport_v62.md  Metrics_Phase1.md  Metrics_Phase2.md  Metrics_Phase22.md  Metrics_Phase23.md  Metrics_Phase24.md  (+76 more)
.sdd/runtime/: State_index.yaml  audit_log.jsonl  bootstrap_manifest.json  current_session.json  graph_calls.jsonl
.sdd/specs/: Spec_v0_Compatibility.md  Spec_v10_KernelHardening.md  Spec_v13_RuntimeStabilization.md  Spec_v14_ControlPlaneMigration.md  Spec_v15_KernelUnification.md  Spec_v16_LegacyArchitectureClosure.md  Spec_v17_ValidationRuntime.md  Spec_v19_v1_GraphNavigation.md  Spec_v1_Foundation.md  (+39 more)
scripts/: assert_kill_rate.py  dev-up.sh  generate_vr_report.py  migrate_duckdb_to_pg.py
tests/: conftest.py  test_db_connection.py  test_enforcement_phase46.py
(+591 files in other folders)
