[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd"
version = "0.8.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.10",
    "PyYAML>=6.0",
    "click>=8.0",
]

[project.scripts]
sdd = "sdd.cli:main"
sdd-hook-log = "sdd.hooks.log_tool:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "hypothesis>=6.100",
    "mutmut>=2.0,<3.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short --timeout=30"

[tool.coverage.run]
source = ["sdd"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.mutmut]
paths_to_mutate = "src/sdd/domain/state/reducer.py,src/sdd/domain/guards/pipeline.py,src/sdd/infra/event_store.py,src/sdd/commands/registry.py,src/sdd/infra/projections.py,src/sdd/core/events.py"
tests_dir = "tests/"
runner = "python3 -m pytest tests/ -x -q"
